# Movies

./: .gitignore
backend/: .env  Cargo.toml
backend/migrations/2023-06-28-120019_create_movie_table/: up.sql
backend/src/: main.rs
backend/src/api/: api.rs
backend/src/models/: movie.rs
backend/src/repository/: schema.rs
movie-frontend/: README.md  package-lock.json  package.json  tsconfig.json
movie-frontend/json/: data.json
movie-frontend/src/: App.vue  main.ts
movie-frontend/src/components/: ActionButtonsCellRenderer.vue
movie-frontend/src/router/: index.ts
movie-frontend/src/views/: MoviesAddView.vue  MoviesDeleteView.vue  MoviesEditView.vue  MoviesView.vue
src/repository/: database.rs
