[package]
name = "Movie_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["mysql", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
redis = "0.23.0"
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v4"] }
